--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>EscrowDemo</title>
-  <base href="/escrow-demo/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.d1df30bceb7be0066ee8.css"></head>
+<link rel="stylesheet" href="styles.aaf3c6268b64630fb920.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.1cf0686c8daa95baeb31.js"></script><script type="text/javascript" src="main.3051f06063c67773aaa4.js"></script></body>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.1cf0686c8daa95baeb31.js"></script><script type="text/javascript" src="main.eb2baaee0581780e8599.js"></script></body>
 </html>
